@@ -45,7 +45,8 @@
 }
 
 .parseNumAlleles <- function(x) {
-  unlist(lapply(strsplit(x, ",", fixed=TRUE), length), use.names=FALSE)
+  #unlist(lapply(strsplit(x, ",", fixed=TRUE), length), use.names=FALSE)
+  str_count(x, ",") + 1L
 }
 
 .maxAlleleLength <- function(x) {
